# homework-2---raytracer-peterochek

./: .gitignore  Cargo.toml
src/: main.rs  material.rs  vec3.rs
src/objects/: object.rs  plane.rs  sphere.rs
src/raytracing/: physics.rs  util.rs
