[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[lib]
#crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[dependencies]
#raytracing = { path = "../raytracing" }
image = "0.24.4"
rayon = "1.5.3"
